cargo-features = ["trim-paths"]

[package]
name = "basic-wallet-tx-script"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
miden = { path = "../../sdk/sdk" }

[package.metadata.component]
package = "miden:basic-wallet-tx-script"

[package.metadata.miden]
project-kind = "transaction-script"

# Miden dependencies for cargo-miden build/linking
[package.metadata.miden.dependencies]
"miden:basic-wallet" = { path = "../basic-wallet" }


[package.metadata.component.target.dependencies]
"miden:basic-wallet" = { path = "../basic-wallet/wit/basic-wallet.wit" }

[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]
