cargo-features = ["trim-paths"]

[package]
name = "basic_wallet"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
miden = { path = "../../sdk/sdk" }
wit-bindgen-rt = "0.28"

[package.metadata.component]
package = "miden:basic-wallet"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountUpdatableCode"]

[package.metadata.component.target.dependencies]
"miden:base" = { path = "../../sdk/base/wit/miden.wit" }
"miden:core-intrinsics" = { path = "../../sdk/stdlib-sys/wit/miden-core-intrinsics.wit" }
"miden:core-stdlib" = { path = "../../sdk/stdlib-sys/wit/miden-core-stdlib.wit" }
"miden:core-base" = { path = "../../sdk/base-sys/wit/miden-core-base.wit" }

[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]
