cargo-features = ["trim-paths"]

[package]
name = "counter-contract"
description = "A simple example of a Miden counter contract using the Account Storage API"
version = "0.1.0"
edition = "2024"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
miden = { path = "../../sdk/sdk" }

[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]
