cargo-features = ["trim-paths"]

[package]
name = "p2id-tx-script"
version = "0.1.0"
edition = "2024"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
miden = { path = "../../sdk/sdk" }

[package.metadata.component]
package = "miden:p2id-tx-script"

[package.metadata.miden]
project-kind = "transaction-script"

# Miden dependencies for cargo-miden build/linking
[package.metadata.miden.dependencies]
"miden:basic-wallet" = { path = "../basic-wallet" }
"miden:p2id" = { path = "../p2id-note" }

[package.metadata.component.target.dependencies]
"miden:basic-wallet" = { path = "../basic-wallet/target/generated-wit/" }
"miden:p2id" = { path = "../p2id-note/target/generated-wit/" }

[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]
