cargo-features = ["trim-paths"]

[package]
name = "swapp-note"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
miden = { path = "../../sdk/sdk" }
wit-bindgen-rt = "0.28"

[package.metadata.miden]
project-kind = "note-script"

# Miden dependencies for cargo-miden build/linking
[package.metadata.miden.dependencies]
"miden:basic-wallet" = { path = "../basic-wallet" }
"miden:p2id-note" = { path = "../p2id-note" }

# TODO: switch to miden table
[package.metadata.component]
package = "miden:swapp-note"

[package.metadata.component.target.dependencies]
"miden:base" = { path = "../../sdk/base/wit/miden.wit" }
"miden:basic-wallet" = { path = "../basic-wallet/wit/basic-wallet.wit" }

[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]

[package.metadata.cargo-machete]
ignored = ["wit-bindgen-rt"]